# grid_gravitas

./: .gitignore  Cargo.toml  README.md  env_vars.sh  environment.yml  example.txt  output.nc
example/input_ERA5/: GridWeights_ERA5.txt
example/input_VIC/: GridWeights.txt
src/: cli.rs  geometry.rs  io.rs  main.rs  rtree.rs  utils.rs
