[package]
name = "grid_gravitas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
netcdf="0.10.5"
ndarray="0.16.1"
gdal="0.17.0"
geo="0.28.0"
proj="0.27.2"
geo-types="0.7.13"
geo-booleanop = "0.3.2"
wkt = { version = "0.9.0", features = ["geo-types"] }
clap = { version = "4.2.7", features = ["derive"] }
rstar = "0.12.0"
rayon = "1.10.0"

[dev-dependencies]
tempfile = "3.13.0"